# Winter

./: .gitattributes  .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE
Assets/Fonts/Roboto/: roboto.fnt
CMake/Modules/: Findglfw3.cmake
Include/: Configuration.h  Engine.h  Scene.h  Timer.h  Window.h
Include/Factory/: FontFactory.h  FramebufferFactory.h  MeshFactory.h  ShaderFactory.h  ShaderProgramFactory.h  TextureFactory.h
Include/Graphics/: Camera.h  Font.h  FontChar.h  Framebuffer.h  Geometry.h  Mesh.h  Quad.h  Renderbuffer.h  Renderer.h  Shader.h  ShaderProgram.h  ShaderType.h  Text.h  Texture.h  VertexAttribute.h
Include/Graphics/Lights/: PointLight.h
Include/Input/: CameraInputHandler.h  InputManager.h  Joystick.h
Include/Scenes/: DefaultScene.h
Include/Utility/: FileUtils.h  OGLUtils.h  StringUtils.h  TypeUtils.h
Source/: Engine.cpp  Main.cpp  Timer.cpp  Window.cpp
Source/Factory/: FontFactory.cpp  FramebufferFactory.cpp  MeshFactory.cpp  ShaderFactory.cpp  ShaderProgramFactory.cpp  TextureFactory.cpp
Source/Graphics/: Camera.cpp  Font.cpp  Framebuffer.cpp  Mesh.cpp  Quad.cpp  Renderbuffer.cpp  Renderer.cpp  Shader.cpp  ShaderProgram.cpp  Text.cpp  Texture.cpp
Source/Graphics/Lights/: PointLight.cpp
Source/Input/: CameraInputHandler.cpp  InputManager.cpp  Joystick.cpp
Source/Scenes/: DefaultScene.cpp
Source/Utility/: FileUtils.cpp  OGLUtils.cpp  StringUtils.cpp
